--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -33,10 +33,6 @@
   @include lg {
     transform: translateX(-6rem);
   }
-
-  @include xl {
-    transform: translateX(-9.5rem);
-  }
 }
 
 .align_navbar span {
@@ -126,7 +122,7 @@
     transform: translateY(-1.5rem);
     margin: -1.5rem 0 0.5rem;
     border-radius: 4px;
-    padding: 0 2.3rem 0.25rem 0.4rem;
+    padding: 0 2.7rem 0.75rem 0.4rem;
     background: rgba($color: #000000, $alpha: 0.75);
   }
 
@@ -148,7 +144,7 @@
   padding: 1rem 0;
 
   @include lg {
-    top: 2.35rem;
+    top: 2.15rem;
   }
 
   @include xl {
